--- a/demo/index.html
+++ b/demo/index.html
@@ -103,9 +103,12 @@
 <div id="item2" data-aos="zoom-in-up">
   <img id="itemtest2" src="/demo/img/poster2.png" alt="Poster1" style="width:100%;max-width:300px">
 </div>
-<div class="item3" data-aos="zoom-in-up">1</div>
-<div class="item4" data-aos="zoom-in-up">2</div>
-<div class="item5" data-aos="zoom-in-up">3</div>
+<div class="item3" data-aos="zoom-in-up"> <img id="itemtest3" src="/demo/img/DATA Final 2.pdf" alt="Data Final" style="width:100%;max-width:300px">
+</div>
+<div class="item4" data-aos="zoom-in-up">
+  <img id="itemtest4" src="/demo/img/bodoni 6.3.pdf" alt="Bodoni" style="width:100%;max-width:300px">
+</div>
+<div class="item5" data-aos="zoom-in-up"> <img id="itemtest5" src="/demo/img/Hot Glue Gun Manual.pdf alt="Manual" style="width:100%;max-width:300px"></div>
 </div>
 <!-- contact -->
 <div class="animated infinite pulse slower aboutMe"><h1 data-aos="zoom-in-down">Contact</h1></div>
