added aboutMe and linked Portfolio

--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <div class="col-lg-8">
                                   <ul class="nav navbar-nav nav-links">
-                                     <li><a href="#">Portfolio</a></li>
+                                     <li><a href="#portfolio_images">Portfolio</a></li>
                                     <li><a href="#">About</a></li>
                                     <li><a href="#">Contact</a></li>
                                     <li><a href="#"></a></li>
@@ -86,14 +86,14 @@
   <div id="intro">
     
     <h1 data-aos="fade-in-down" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="1000">Raymond</h1 >
-   <div id="quote"><p>Porfolio Site</p></div> 
-
+   <div id="quote"><p>hello</p></div> 
+   <div id="about"><p>I am a Junior Graphic Design student at the University of Massachusetts Dartmouth where I am currently Pursuing my Bachelor's degree. I enjoy the challenges associated with code. I tend to use subtle details in my designs. These subtle details in my opinion are the key aspects that make a successful design. </div>
   </div>
 </div>
 
 <!-- Portfolio images -->
-<div class="itemcontainer">
-    <div class="animated infinite pulse slower portfolio"><h1 data-aos="zoom-in-up">PORTFOLIO</h1></div>
+<div id="portfolio_images">
+    <!-- <div class="animated infinite pulse slower portfolio"><h1 data-aos="zoom-in-up">PORTFOLIO</h1></div> -->
 <div id="item" data-aos="zoom-in-down">
     <img id="itemtest" src="/demo/img/poster1.jpg" alt="test" style="width:100%;max-width:300px">
 </div>
@@ -101,7 +101,7 @@
   <img id="itemtest1" src="/demo/img/headphones.jpg" alt="test" style="width:100%;max-width:300px">
 </div>
 <div id="item2" data-aos="zoom-in-up">
-  <img id="itemtest2" src="/demo/img/bodoni 6.3.jpg" alt="Poster1" style="width:100%;max-width:300px">
+  <img id="itemtest2" src="/demo/img/bodoni.jpg" alt="Poster1" style="width:100%;max-width:300px">
 </div>
 <div id="item3" data-aos="zoom-in-up">
     <img id="itemtest3" src="/demo/img/DATA Final 2.jpg" alt="Data" style="width:100%;max-width:300px">
@@ -115,7 +115,7 @@
 </div>
 <!-- contact -->
 <div class="animated infinite pulse slower aboutMe"><h1 data-aos="zoom-in-down">Contact</h1></div>
-<div id="mail"><img src="img/maill.svg" alt="Email"></div>
+<div id="mail"></div>
 <div id="linkedin"><img src="img/linkedIn.svg" alt="LinkedIn"></div>
 <!-- Trigger the Modal -->
 
