added icons for "Contacts" section

--- a/demo/index.html
+++ b/demo/index.html
@@ -114,9 +114,12 @@
       </div>
 </div>
 <!-- contact -->
+<div id="contacts">
 <div class="animated infinite pulse slower aboutMe"><h1 data-aos="zoom-in-down">Contact</h1></div>
-<div id="mail"></div>
-<div id="linkedin"><img src="img/linkedIn.svg" alt="LinkedIn"></div>
+<div id="mail"><img src="/demo/img/gmail.png" alt="Mail"></div>
+<div id="gitHub"><img src="img/GitHub-Mark-Light-120px-plus.png" alt="Git Hub"></div>
+<div id="linkedin"><img src="img/linkedin.png" alt="LinkedIn"></div>
+</div>
 <!-- Trigger the Modal -->
 
 <!-- The Modal -->
