added pulse animation to contact icons

--- a/demo/index.html
+++ b/demo/index.html
@@ -43,7 +43,7 @@
                             <div class="col-lg-8">
                                   <ul class="nav navbar-nav nav-links">
                                      <li><a href="#portfolio_images">Portfolio</a></li>
-                                    <li><a href="#">About</a></li>
+                                    <li><a href="#contactME">About</a></li>
                                     <li><a href="#">Contact</a></li>
                                     <li><a href="#"></a></li>
                                     <!-- <li><a href="#">Elements</a></li> -->
@@ -114,11 +114,13 @@
       </div>
 </div>
 <!-- contact -->
-<div id="contacts">
-<div class="animated infinite pulse slower aboutMe"><h1 data-aos="zoom-in-down">Contact</h1></div>
-<div id="mail"><img src="/demo/img/gmail.png" alt="Mail"></div>
-<div id="gitHub"><img src="img/GitHub-Mark-Light-120px-plus.png" alt="Git Hub"></div>
-<div id="linkedin"><img src="img/linkedin.png" alt="LinkedIn"></div>
+<div id="contacts" data-aos="zoom-in-up">
+<div class="animated infinite pulse slower mail">
+  <img src="/demo/img/gmail.png" alt="Mail"></div>
+<div class="animated infinite pulse slower gitHub">
+  <img src="img/GitHub-Mark-Light-120px-plus.png" alt="Git Hub"></div>
+<div class="animated infinite pulse slower linkedin">
+  <img src="img/linkedin.png" alt="LinkedIn"></div>
 </div>
 <!-- Trigger the Modal -->
 
