added div to show on hover with image information

--- a/demo/index.html
+++ b/demo/index.html
@@ -96,6 +96,8 @@
     <!-- <div class="animated infinite pulse slower portfolio"><h1 data-aos="zoom-in-up">PORTFOLIO</h1></div> -->
 <div id="item" data-aos="zoom-in-down">
     <img id="itemtest" src="/demo/img/poster1.jpg" alt="test" style="width:100%;max-width:300px">
+    <div class="hovertxt"><p class="hoverinfo">Typography 2</p>
+    </div>
 </div>
 <div id="item1" data-aos="zoom-in-up" data-aos-anchor-placement="center-bottom" data-aos-easing="ease-in-sine" data-aos-duration="700">
   <img id="itemtest1" src="/demo/img/headphones.jpg" alt="test" style="width:100%;max-width:300px">
