added circle for profile picture

--- a/demo/index.html
+++ b/demo/index.html
@@ -84,7 +84,7 @@
       </div>
 <div id="particles">
   <div id="intro">
-    
+      <div class="animated infinite pulse slower profpic">1</div>
     <h1 data-aos="fade-in-down" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="1000">Raymond</h1 >
    <div id="quote"><p>hello</p></div> 
    <div id="about"><p>I am a Junior Graphic Design student at the University of Massachusetts Dartmouth where I am currently Pursuing my Bachelor's degree. I enjoy the challenges associated with code. I tend to use subtle details in my designs. These subtle details in my opinion are the key aspects that make a successful design. </div>
@@ -101,18 +101,28 @@
 </div>
 <div id="item1" data-aos="zoom-in-up" data-aos-anchor-placement="center-bottom" data-aos-easing="ease-in-sine" data-aos-duration="700">
   <img id="itemtest1" src="/demo/img/headphones.jpg" alt="test" style="width:100%;max-width:300px">
+  <div class="hovertxt"><p class="hoverinfo">Typography 3</p>
+  </div>
 </div>
 <div id="item2" data-aos="zoom-in-up">
   <img id="itemtest2" src="/demo/img/bodoni.jpg" alt="Poster1" style="width:100%;max-width:300px">
+  <div class="hovertxt"><p class="hoverinfo">Typography 2</p>
+  </div>
 </div>
 <div id="item3" data-aos="zoom-in-up">
     <img id="itemtest3" src="/demo/img/DATA Final 2.jpg" alt="Data" style="width:100%;max-width:300px">
+    <div class="hovertxt1"><p class="hoverinfo">Typography 2</p>
+    </div>
   </div>
   <div id="item4" data-aos="zoom-in-up">
       <img id="itemtest4" src="/demo/img/Hot Glue Gun Manual.jpg" alt="Data" style="width:100%;max-width:300px">
+      <div class="hovertxt1"><p class="hoverinfo">Typography 2</p>
+      </div>
     </div>
     <div id="item5" data-aos="zoom-in-up">
         <img id="itemtest5" src="/demo/img/nano silk.jpg" alt="Data" style="width:100%;max-width:300px">
+        <div class="hovertxt1"><p class="hoverinfo">Typography 2</p>
+        </div>
       </div>
 </div>
 <!-- contact -->
