--- a/demo/index.html
+++ b/demo/index.html
@@ -84,7 +84,7 @@
       </div>
 <div id="particles">
   <div id="intro">
-      <div class="animated infinite pulse slower profpic">1</div>
+      <div class="animated infinite pulse slower profpic"></div>
     <h1 data-aos="fade-in-down" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="1000">Raymond</h1 >
    <div id="quote"><p>hello</p></div> 
    <div id="about"><p>I am a Junior Graphic Design student at the University of Massachusetts Dartmouth where I am currently Pursuing my Bachelor's degree. I enjoy the challenges associated with code. I tend to use subtle details in my designs. These subtle details in my opinion are the key aspects that make a successful design. </div>
