--- a/demo/index.html
+++ b/demo/index.html
@@ -96,43 +96,57 @@
     <!-- <div class="animated infinite pulse slower portfolio"><h1 data-aos="zoom-in-up">PORTFOLIO</h1></div> -->
 <div id="item" data-aos="zoom-in-down">
     <img id="itemtest" src="/demo/img/poster1.jpg" alt="test" style="width:100%;max-width:300px">
-    <div class="hovertxt"><p class="hoverinfo">Typography 2</p>
+    <div class="hovertxt"><p class="hoverinfo">Have You Eaten Yet?</p>
+      <p class="moreinfo">Part of a series of posters using typography to depict the connection between food and its aid in creating bonds   
+      </p>
     </div>
 </div>
 <div id="item1" data-aos="zoom-in-up" data-aos-anchor-placement="center-bottom" data-aos-easing="ease-in-sine" data-aos-duration="700">
   <img id="itemtest1" src="/demo/img/headphones.jpg" alt="test" style="width:100%;max-width:300px">
-  <div class="hovertxt"><p class="hoverinfo">Typography 3</p>
+  <div class="hovertxt"><p class="hoverinfo">Headphones</p>
+    <p class="moreinfo">A poster of vector headphones to give tribute to the original creator and design of the technology
+      </p>
   </div>
 </div>
 <div id="item2" data-aos="zoom-in-up">
   <img id="itemtest2" src="/demo/img/bodoni.jpg" alt="Poster1" style="width:100%;max-width:300px">
-  <div class="hovertxt"><p class="hoverinfo">Typography 2</p>
+  <div class="hovertxt"><p class="hoverinfo">Bodoni Poster</p>
+    <p class="moreinfo">Part of a series of posters using typography to depict the connection between food and its aid in creating bonds   
+      </p>
   </div>
 </div>
 <div id="item3" data-aos="zoom-in-up">
     <img id="itemtest3" src="/demo/img/DATA Final 2.jpg" alt="Data" style="width:100%;max-width:300px">
     <div class="hovertxt1"><p class="hoverinfo">Typography 2</p>
+      <p class="moreinfo">Part of a series of posters using typography to depict the connection between food and its aid in creating bonds   
+        </p>
     </div>
   </div>
   <div id="item4" data-aos="zoom-in-up">
       <img id="itemtest4" src="/demo/img/Hot Glue Gun Manual.jpg" alt="Data" style="width:100%;max-width:300px">
       <div class="hovertxt1"><p class="hoverinfo">Typography 2</p>
+        <p class="moreinfo">Part of a series of posters using typography to depict the connection between food and its aid in creating bonds   
+          </p>
       </div>
     </div>
     <div id="item5" data-aos="zoom-in-up">
         <img id="itemtest5" src="/demo/img/nano silk.jpg" alt="Data" style="width:100%;max-width:300px">
         <div class="hovertxt1"><p class="hoverinfo">Typography 2</p>
+          <p class="moreinfo">Part of a series of posters using typography to depict the connection between food and its aid in creating bonds   
+            </p>
         </div>
       </div>
 </div>
 <!-- contact -->
 <div id="contacts" data-aos="zoom-in-up">
 <div class="animated infinite pulse slower mail">
-  <img src="/demo/img/gmail.png" alt="Mail"></div>
+  <a href = "mailto: c.raymondchen@gmail.com">
+  <img src="/demo/img/gmail.png" alt="Mail"></a></div>
 <div class="animated infinite pulse slower gitHub">
-  <img src="img/GitHub-Mark-Light-120px-plus.png" alt="Git Hub"></div>
+ <a href="https://github.com/raymondchen0" target="_blank"><https://github.com/raymondchen0><img src="img/GitHub-Mark-Light-120px-plus.png" alt="Git Hub"></a>
+</div>
 <div class="animated infinite pulse slower linkedin">
-  <img src="img/linkedin.png" alt="LinkedIn"></div>
+  <a href="https://linkedin.com/in/raymondchen0" target="_blank"><https://linkedin.com/in/raymondchen0><img src="img/linkedin.png" alt="LinkedIn"></div>
 </div>
 <!-- Trigger the Modal -->
 
