added icon and link to resume

--- a/demo/index.html
+++ b/demo/index.html
@@ -124,10 +124,14 @@
  <a href="https://github.com/raymondchen0" target="_blank"><https://github.com/raymondchen0>
   <img src="img/github.png" alt="Git Hub"></a>
 </div>
+<div class="animated infinite pulse slower resumeico">
+    <a href="https://docs.google.com/document/d/1-Y0wugkuoLhjOoVR4X2zXbDJP5_qzjlhPm-fu1bN9tk/edit?usp=sharing" target="_blank"><https://docs.google.com/document/d/1-Y0wugkuoLhjOoVR4X2zXbDJP5_qzjlhPm-fu1bN9tk/edit?usp=sharing>
+      <img src="img/resume.png" alt="Resume"></a></div>
 <div class="animated infinite pulse slower linkedin">
   <a href="https://linkedin.com/in/raymondchen0" target="_blank"><https://linkedin.com/in/raymondchen0>
     <img src="img/linkedin.png" alt="LinkedIn"></a></div>
 </div>
+  </div>
 <!-- Trigger the Modal -->
 
 <!-- The Modal -->
@@ -138,9 +142,6 @@
 
   <!-- Modal Content (The Image) -->
   <img class="modal-content" id="img01">
-
-  <!-- Modal Caption (Image Text) -->
-  <div id="caption"></div>
 </div>
 <script type='text/javascript' src='js/modal.js'></script>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
